# rules_jvm_example

./: .gitignore  MODULE.bazel  README.md  WORKSPACE
